GH-2940: Improvements in DefaultKafkaHeaderMapper
Fixes: #2940 

Minor improvements and code cleanup in DefaultKafkaHeaderMapper.